example-12/nginx-ingress/ingress-phpldapadmin.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-phpldapadmin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "phpldapadmin.owl.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: phpldapadmin
            port:
              number: 80
